# research-copilot

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  dev.db-shm  dev.db-wal  pyproject.toml  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: b736061ba015_initial_schema.py
backend/app/: __init__.py  config.py  logging_config.py  main.py
backend/app/api/: chat.py  health.py  sessions.py  workflow.py
backend/app/db/: database.py  migrate.py  models.py  repository.py
backend/app/graph/: builder.py  chat_graph.py  llm.py  mock.py  prompts.py  router.py  state.py  tools.py  util.py
backend/app/graph/nodes/: __init__.py  analysis.py  planner.py  quality_check.py  report.py  research.py
backend/app/schemas/: api.py  report.py
backend/app/services/: engine.py  pubsub.py  workflow_runner.py
backend/tests/: conftest.py  test_api.py  test_graph.py
docs/: architecture.md  engineering-decisions.md  product-improvements.md
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ChatPanel.tsx  NewSessionForm.tsx  ReportView.tsx  SessionList.tsx  StatusBadge.tsx  WorkflowProgress.tsx
frontend/src/hooks/: sessions.ts
frontend/src/lib/: api.ts  nodes.ts  types.ts  useEventStream.ts
frontend/src/pages/: HomePage.tsx  SessionDetailPage.tsx
