[project]
name = "research-copilot-backend"
version = "0.1.0"
description = "AI Research Copilot — FastAPI + LangGraph backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sse-starlette>=2.1",
    "sqlalchemy[asyncio]>=2.0.36",
    "psycopg[binary,pool]>=3.2",
    "langgraph>=0.2.50",
    "langgraph-checkpoint-postgres>=2.0",
    "langgraph-checkpoint-sqlite>=2.0",
    "aiosqlite>=0.20",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langchain-tavily>=0.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
