[project]
name = "research-copilot-backend"
version = "0.1.0"
description = "AI Research Copilot — FastAPI + LangGraph backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "uvicorn[standard]>=0.49.0",
    "pydantic-settings>=2.14.1",
    "sse-starlette>=3.4.4",
    "sqlalchemy[asyncio]>=2.0.50",
    "alembic>=1.13",
    "psycopg[binary,pool]>=3.3.4",
    "langgraph>=1.2.5",
    "langgraph-checkpoint-postgres>=3.1.0",
    "langchain-core>=1.4.7",
    "langchain-openai>=1.3.2",
    "langchain-tavily>=0.2.18",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.17",
    "testcontainers[postgres]>=4.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# Ruff configuration lives in ./ruff.toml.

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
